--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
 
         "polidog/php-chatwork-api": "dev-master",
-        "seven/symfony-rpc-bundle": "dev-master"
+        "friendsofsymfony/user-bundle": "~2.0@dev"
 
     },
     "scripts": {
