--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Polidog\BackworkBundle\Entity\User
+
+doctrine_migrations:
+    dir_name: %kernel.root_dir%/migrations
